se agrega postgres, se quita mysql

--- a/pom.xml.2
+++ b/pom.xml.2
@@ -18,11 +18,11 @@ language governing permissions and limitations under the License. -->
         <version>13.0.0.Final</version>
         <relativePath />
     </parent>
-    <artifactId>test</artifactId>
+    <artifactId>demos</artifactId>
     <groupId>com.softtrons</groupId>
     <version>1.0.0</version>
     <packaging>war</packaging>
-    <name>test</name>
+    <name>demo-soft</name>
     <description>A simple greeter project that demonstrates CDI, JPA, JTA, EJB and JSF</description>
 
     <licenses>
